--- a/Tool/Clash/Rule/OpenAI.yaml
+++ b/Tool/Clash/Rule/OpenAI.yaml
@@ -1,4 +1,5 @@
 payload:
   - DOMAIN-SUFFIX, openai.com
+  - DOMAIN-SUFFIX, ai.com
   - DOMAIN, cdn.auth0.com
   - DOMAIN, openaiapi-site.azureedge.net
