更新QuantumultX配置文件模板

--- a/Tool/QuantumultX/Config/Quantumult_X_Sample_Configuration_By_iKeLee.conf
+++ b/Tool/QuantumultX/Config/Quantumult_X_Sample_Configuration_By_iKeLee.conf
@@ -83,6 +83,7 @@ static = 全球节点手动策略组, resource-tag-regex = ., server-tag-regex =
 https://gitlab.com/lodepuly/anti-ad/-/raw/master/anti-ad-surge.txt, tag = anti-AD, force-policy = reject, update-interval = 86400, opt-parser = true, enabled = true
 https://gitlab.com/lodepuly/proxy_tool_resources/-/raw/master/rule/QuantumultX/Telegram/Telegram.list, tag = Telegram, force-policy = 新加坡场景策略组, update-interval = 86400, opt-parser = false, enabled = true
 https://gitlab.com/lodepuly/proxy_tool_resources/-/raw/master/rule/QuantumultX/TikTok/TikTok.list, tag = TikTok, force-policy = 日本场景策略组, update-interval = 86400, opt-parser = false, enabled = true
+https://gitlab.com/lodepuly/proxy_tool_resources/raw/master/rule/QuantumultX/Bing/Bing.list, tag = Bing, force-policy = 香港场景策略组, update-interval = 86400, opt-parser = false, enabled = true
 https://gitlab.com/lodepuly/vpn_tool/-/raw/main/Tool/QuantumultX/Rule/OpenAI.snippet, tag = OpenAI, force-policy = 香港场景策略组, update-interval = 86400, opt-parser = false, enabled = false
 https://gitlab.com/lodepuly/proxy_tool_resources/-/raw/master/rule/QuantumultX/TestFlight/TestFlight.list, tag = TestFlight, force-policy = 香港场景策略组, update-interval = 86400, opt-parser = false, enabled = false
 https://gitlab.com/lodepuly/vpn_tool/-/raw/main/Tool/QuantumultX/Rule/AppStore.snippet, tag = App Store, force-policy = 香港场景策略组, update-interval = 86400, opt-parser = false, enabled = false
