更新Loon进阶配置文件模板

--- a/Tool/Loon/Config/Loon_Sample_Configuration_By_iKeLee.conf
+++ b/Tool/Loon/Config/Loon_Sample_Configuration_By_iKeLee.conf
@@ -1,5 +1,5 @@
 # default config
-# Date: 2023.02.19
+# Date: 2023.02.20
 # Author: https://t.me/iKeLee
 
 [General]
@@ -59,7 +59,7 @@ switch-node-after-failure-times = 3
 新加坡策略 = select, 新加坡延时优选策略组, 新加坡故障转移策略组, 新加坡负载均衡策略组, img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/SG.png
 # 手动选择媒体地区策略
 香港媒体策略 = select, 香港媒体延时优选策略组, 香港媒体故障转移策略组, 香港媒体负载均衡策略组, img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/HK.png
-台湾媒体策略 = select, 台湾媒体延时优选策略组, 台湾媒体故障转移策略组, 台湾媒体负载均衡策略组, img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/HK.png
+台湾媒体策略 = select, 台湾媒体延时优选策略组, 台湾媒体故障转移策略组, 台湾媒体负载均衡策略组, img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/TW.png
 日本媒体策略 = select, 日本媒体延时优选策略组, 日本媒体故障转移策略组, 日本媒体负载均衡策略组, img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/JP.png
 韩国媒体策略 = select, 韩国媒体延时优选策略组, 韩国媒体故障转移策略组, 韩国媒体负载均衡策略组, img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/KR.png
 美国媒体策略 = select, 美国媒体延时优选策略组, 美国媒体故障转移策略组, 美国媒体负载均衡策略组, img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/US.png
@@ -130,24 +130,24 @@ switch-node-after-failure-times = 3
 FINAL, 香港场景策略组
 
 [Remote Rule]
-https://gitlab.com/lodepuly/anti-ad/-/raw/master/anti-ad-surge.txt, policy = REJECT, tag = Anti-AD, enabled = true
-https://gitlab.com/lodepuly/proxy_tool_resources/-/raw/master/rule/Loon/Telegram/Telegram.list, policy = 新加坡场景策略组, tag = Telegram, enabled = true
-https://gitlab.com/lodepuly/proxy_tool_resources/-/raw/master/rule/Loon/TikTok/TikTok.list, policy = 日本场景策略组, tag = TikTok, enabled = true
-https://gitlab.com/lodepuly/proxy_tool_resources/-/raw/master/rule/Loon/Bing/Bing.list, policy = 香港场景策略组, tag = Bing, enabled = true
-https://gitlab.com/lodepuly/vpn_tool/-/raw/main/Tool/Loon/Rule/OpenAI.list, policy = 香港场景策略组, tag = OpenAI, enabled = true
-https://gitlab.com/lodepuly/proxy_tool_resources/-/raw/master/rule/Loon/TestFlight/TestFlight.list, policy = 香港场景策略组, tag = TestFlight, enabled = false
-https://gitlab.com/lodepuly/vpn_tool/-/raw/main/Tool/Loon/Rule/AppStore.list, policy = 香港场景策略组, tag = App Store, enabled = false
-https://gitlab.com/lodepuly/vpn_tool/-/raw/main/Tool/Loon/Rule/AppleID.list, policy = DIRECT, tag = Apple ID, enabled = false
-https://gitlab.com/lodepuly/proxy_tool_resources/-/raw/master/rule/Loon/GitHub/GitHub.list, policy = 香港场景策略组, tag = GitHub, enabled = false
-https://gitlab.com/lodepuly/proxy_tool_resources/-/raw/master/rule/Loon/Netflix/Netflix.list, policy = 新加坡媒体场景策略组, tag = Netflix, enabled = false
-https://gitlab.com/lodepuly/proxy_tool_resources/-/raw/master/rule/Loon/YouTube/YouTube.list, policy = 香港场景策略组, tag = Youtube, enabled = false
-https://gitlab.com/lodepuly/proxy_tool_resources/-/raw/master/rule/Loon/Disney/Disney.list, policy = 香港场景策略组, tag = Disney, enabled = false
-https://gitlab.com/lodepuly/proxy_tool_resources/-/raw/master/rule/Loon/Twitter/Twitter.list, policy = 香港场景策略组, tag = Twitter, enabled = false
-https://gitlab.com/lodepuly/proxy_tool_resources/-/raw/master/rule/Loon/Spotify/Spotify.list, policy = 香港场景策略组, tag = Spotify, enabled = false
-https://gitlab.com/lodepuly/proxy_tool_resources/-/raw/master/rule/Loon/Google/Google.list, policy = 香港场景策略组, tag = Google, enabled = false
-https://gitlab.com/lodepuly/proxy_tool_resources/-/raw/master/rule/Loon/OneDrive/OneDrive.list, policy = 香港场景策略组, tag = OneDrive, enabled = false
-https://gitlab.com/lodepuly/proxy_tool_resources/-/raw/master/rule/Loon/Speedtest/Speedtest.list, policy = DIRECT, tag = Speedtest, enabled = false
-https://gitlab.com/lodepuly/proxy_tool_resources/-/raw/master/rule/Loon/ChinaASN/ChinaASN_Resolve.list, policy = DIRECT, tag = China ASN, enabled = true
+https://gitlab.com/lodepuly/anti-ad/raw/master/anti-ad-surge.txt, policy = REJECT, tag = Anti-AD, enabled = true
+https://gitlab.com/lodepuly/proxy_tool_resources/raw/master/rule/Loon/Telegram/Telegram.list, policy = 新加坡场景策略组, tag = Telegram, enabled = true
+https://gitlab.com/lodepuly/proxy_tool_resources/raw/master/rule/Loon/TikTok/TikTok.list, policy = 日本场景策略组, tag = TikTok, enabled = true
+https://gitlab.com/lodepuly/proxy_tool_resources/raw/master/rule/Loon/Bing/Bing.list, policy = 香港场景策略组, tag = Bing, enabled = true
+https://gitlab.com/lodepuly/vpn_tool/raw/main/Tool/Loon/Rule/OpenAI.list, policy = 香港场景策略组, tag = OpenAI, enabled = false
+https://gitlab.com/lodepuly/vpn_tool/raw/main/Tool/Loon/Rule/AppleID.list, policy = DIRECT, tag = Apple ID, enabled = false
+https://gitlab.com/lodepuly/proxy_tool_resources/raw/master/rule/Loon/TestFlight/TestFlight.list, policy = DIRECT, tag = TestFlight, enabled = false
+https://gitlab.com/lodepuly/vpn_tool/raw/main/Tool/Loon/Rule/AppStore.list, policy = DIRECT, tag = App Store, enabled = false
+https://gitlab.com/lodepuly/proxy_tool_resources/raw/master/rule/Loon/GitHub/GitHub.list, policy = 香港场景策略组, tag = GitHub, enabled = false
+https://gitlab.com/lodepuly/proxy_tool_resources/raw/master/rule/Loon/Netflix/Netflix.list, policy = 新加坡媒体场景策略组, tag = Netflix, enabled = false
+https://gitlab.com/lodepuly/proxy_tool_resources/raw/master/rule/Loon/YouTube/YouTube.list, policy = 香港场景策略组, tag = Youtube, enabled = false
+https://gitlab.com/lodepuly/proxy_tool_resources/raw/master/rule/Loon/Disney/Disney.list, policy = 香港场景策略组, tag = Disney, enabled = false
+https://gitlab.com/lodepuly/proxy_tool_resources/raw/master/rule/Loon/Twitter/Twitter.list, policy = 香港场景策略组, tag = Twitter, enabled = false
+https://gitlab.com/lodepuly/proxy_tool_resources/raw/master/rule/Loon/Spotify/Spotify.list, policy = 香港场景策略组, tag = Spotify, enabled = false
+https://gitlab.com/lodepuly/proxy_tool_resources/raw/master/rule/Loon/Google/Google.list, policy = 香港场景策略组, tag = Google, enabled = false
+https://gitlab.com/lodepuly/proxy_tool_resources/raw/master/rule/Loon/OneDrive/OneDrive.list, policy = 香港场景策略组, tag = OneDrive, enabled = false
+https://gitlab.com/lodepuly/proxy_tool_resources/raw/master/rule/Loon/Speedtest/Speedtest.list, policy = DIRECT, tag = Speedtest, enabled = false
+https://gitlab.com/lodepuly/proxy_tool_resources/raw/master/rule/Loon/ChinaASN/ChinaASN_Resolve.list, policy = DIRECT, tag = China ASN, enabled = true
 
 [Host]
 # ssid:PHICOMM_5G = server:10.0.0.1
@@ -157,34 +157,35 @@ https://gitlab.com/lodepuly/proxy_tool_resources/-/raw/master/rule/Loon/ChinaASN
 [Script]
 
 [Plugin]
-https://gitlab.com/lodepuly/vpn_tool/-/raw/main/Tool/Loon/Plugin/LoonGallery.plugin, enabled=true
-https://gitlab.com/lodepuly/vpn_tool/-/raw/main/Tool/Loon/Plugin/JD_Price.plugin, enabled=true
-https://gitlab.com/lodepuly/vpn_tool/-/raw/main/Tool/Loon/Plugin/Loon_rewrite_converter.plugin, enabled=true
-https://gitlab.com/lodepuly/vpn_tool/-/raw/main/Tool/Loon/Plugin/Weibo_remove_ads.plugin, enabled=true
-https://gitlab.com/lodepuly/vpn_tool/-/raw/main/Tool/Loon/Plugin/Tieba_remove_ads.plugin, enabled=true
-https://gitlab.com/lodepuly/vpn_tool/-/raw/main/Tool/Loon/Plugin/Zhihu_remove_ads.plugin, enabled=true
-https://gitlab.com/lodepuly/vpn_tool/-/raw/main/Tool/Loon/Plugin/Cainiao_remove_ads.plugin, enabled=true
-https://gitlab.com/lodepuly/vpn_tool/-/raw/main/Tool/Loon/Plugin/Bilibili_remove_ads.plugin, enabled=true
-https://gitlab.com/lodepuly/vpn_tool/-/raw/main/Tool/Loon/Plugin/RedPaper_remove_ads.plugin, enabled=true
-https://gitlab.com/lodepuly/vpn_tool/-/raw/main/Tool/Loon/Plugin/IThome_remove_ads.plugin, enabled=true
-https://gitlab.com/lodepuly/vpn_tool/-/raw/main/Tool/Loon/Plugin/YouTube_remove_ads.plugin, enabled=true
-https://gitlab.com/lodepuly/vpn_tool/-/raw/main/Tool/Loon/Plugin/QQMusic_remove_ads.plugin, enabled=true
-https://gitlab.com/lodepuly/vpn_tool/-/raw/main/Tool/Loon/Plugin/Himalaya_remove_ads.plugin, enabled=true
-https://gitlab.com/lodepuly/vpn_tool/-/raw/main/Tool/Loon/Plugin/Amap_remove_ads.plugin, enabled=true
-https://gitlab.com/lodepuly/vpn_tool/-/raw/main/Tool/Loon/Plugin/BaiduNetDisk_remove_ads.plugin, enabled=true
-https://gitlab.com/lodepuly/vpn_tool/-/raw/main/Tool/Loon/Plugin/NeteaseCloudMusic_remove_ads.plugin, enabled=true
-https://gitlab.com/lodepuly/vpn_tool/-/raw/main/Tool/Loon/Plugin/smzdm_remove_ads.plugin, enabled=true
-https://gitlab.com/lodepuly/vpn_tool/-/raw/main/Tool/Loon/Plugin/WeChat_Official_Accounts_remove_ads.plugin, enabled=true
-https://gitlab.com/lodepuly/vpn_tool/-/raw/main/Tool/Loon/Plugin/Remove_splash_screen_ads.plugin, enabled=true
-https://gitlab.com/lodepuly/vpn_tool/-/raw/main/Tool/Loon/Plugin/Remove_ads_by_keli.plugin, enabled=true
-https://gitlab.com/lodepuly/vpn_tool/-/raw/main/Tool/Loon/Plugin/TestFlight.plugin, enabled=true
-https://gitlab.com/lodepuly/vpn_tool/-/raw/main/Tool/Loon/Plugin/Auto_Join_TF.plugin, enabled=false
-https://gitlab.com/lodepuly/vpn_tool/-/raw/main/Tool/Loon/Plugin/GitHub.plugin, enabled=false
-https://gitlab.com/lodepuly/vpn_tool/-/raw/main/Tool/Loon/Plugin/Fileball_mount.plugin, enabled=true
-https://gitlab.com/lodepuly/vpn_tool/-/raw/main/Tool/Loon/Plugin/Node_detection_tool.plugin, enabled=true
-https://gitlab.com/lodepuly/vpn_tool/-/raw/main/Tool/Loon/Plugin/NodeLinkCheck.Plugin, enabled=true
-https://gitlab.com/lodepuly/vpn_tool/-/raw/main/Tool/Loon/Plugin/Sub-Store.plugin, enabled=false
-https://gitlab.com/lodepuly/vpn_tool/-/raw/main/Tool/Loon/Plugin/BoxJS.plugin, enabled=false
+https://gitlab.com/lodepuly/vpn_tool/raw/main/Tool/Loon/Plugin/LoonGallery.plugin, enabled=true
+https://gitlab.com/lodepuly/vpn_tool/raw/main/Tool/Loon/Plugin/JD_Price.plugin, enabled=true
+https://gitlab.com/lodepuly/vpn_tool/raw/main/Tool/Loon/Plugin/Loon_rewrite_converter.plugin, enabled=true
+https://gitlab.com/lodepuly/vpn_tool/raw/main/Tool/Loon/Plugin/Weibo_remove_ads.plugin, enabled=true
+https://gitlab.com/lodepuly/vpn_tool/raw/main/Tool/Loon/Plugin/Tieba_remove_ads.plugin, enabled=true
+https://gitlab.com/lodepuly/vpn_tool/raw/main/Tool/Loon/Plugin/Zhihu_remove_ads.plugin, enabled=true
+https://gitlab.com/lodepuly/vpn_tool/raw/main/Tool/Loon/Plugin/Cainiao_remove_ads.plugin, enabled=true
+https://gitlab.com/lodepuly/vpn_tool/raw/main/Tool/Loon/Plugin/Bilibili_remove_ads.plugin, enabled=true
+https://gitlab.com/lodepuly/vpn_tool/raw/main/Tool/Loon/Plugin/RedPaper_remove_ads.plugin, enabled=true
+https://gitlab.com/lodepuly/vpn_tool/raw/main/Tool/Loon/Plugin/IThome_remove_ads.plugin, enabled=true
+https://gitlab.com/lodepuly/vpn_tool/raw/main/Tool/Loon/Plugin/YouTube_remove_ads.plugin, enabled=true
+https://gitlab.com/lodepuly/vpn_tool/raw/main/Tool/Loon/Plugin/QQMusic_remove_ads.plugin, enabled=true
+https://gitlab.com/lodepuly/vpn_tool/raw/main/Tool/Loon/Plugin/Himalaya_remove_ads.plugin, enabled=true
+https://gitlab.com/lodepuly/vpn_tool/raw/main/Tool/Loon/Plugin/Amap_remove_ads.plugin, enabled=true
+https://gitlab.com/lodepuly/vpn_tool/raw/main/Tool/Loon/Plugin/BaiduNetDisk_remove_ads.plugin, enabled=true
+https://gitlab.com/lodepuly/vpn_tool/raw/main/Tool/Loon/Plugin/NeteaseCloudMusic_remove_ads.plugin, enabled=true
+https://gitlab.com/lodepuly/vpn_tool/raw/main/Tool/Loon/Plugin/smzdm_remove_ads.plugin, enabled=true
+https://gitlab.com/lodepuly/vpn_tool/raw/main/Tool/Loon/Plugin/Weixin_Official_Accounts_remove_ads.plugin, enabled=true
+https://gitlab.com/lodepuly/vpn_tool/raw/main/Tool/Loon/Plugin/Weixin_external_links_unlock.plugin, enabled=true
+https://gitlab.com/lodepuly/vpn_tool/raw/main/Tool/Loon/Plugin/Remove_splash_screen_ads.plugin, enabled=true
+https://gitlab.com/lodepuly/vpn_tool/raw/main/Tool/Loon/Plugin/Remove_ads_by_keli.plugin, enabled=true
+https://gitlab.com/lodepuly/vpn_tool/raw/main/Tool/Loon/Plugin/TestFlight.plugin, enabled=true
+https://gitlab.com/lodepuly/vpn_tool/raw/main/Tool/Loon/Plugin/Fileball_mount.plugin, enabled=true
+https://gitlab.com/lodepuly/vpn_tool/raw/main/Tool/Loon/Plugin/Node_detection_tool.plugin, enabled=true
+https://gitlab.com/lodepuly/vpn_tool/raw/main/Tool/Loon/Plugin/NodeLinkCheck.Plugin, enabled=true
+https://gitlab.com/lodepuly/vpn_tool/raw/main/Tool/Loon/Plugin/Auto_Join_TF.plugin, enabled=false
+https://gitlab.com/lodepuly/vpn_tool/raw/main/Tool/Loon/Plugin/GitHub.plugin, enabled=false
+https://gitlab.com/lodepuly/vpn_tool/raw/main/Tool/Loon/Plugin/Sub-Store.plugin, enabled=false
+https://gitlab.com/lodepuly/vpn_tool/raw/main/Tool/Loon/Plugin/BoxJS.plugin, enabled=false
 
 [Mitm]
 hostname = 
