--- a/Tool/QuantumultX/Config/Quantumult_X_Simple_Sample_Configuration_By_iKeLee.conf
+++ b/Tool/QuantumultX/Config/Quantumult_X_Simple_Sample_Configuration_By_iKeLee.conf
@@ -1,13 +1,13 @@
 # Quantumelt X 配置
-# 日期：2023.02.19
+# 日期：2023.02.20
 # 配置作者：https://t.me/iKeLee
 # 适用版本：v1.1.0 及以上
 [general]
-profile_img_url = https://gitlab.com/lodepuly/iconlibrary/-/raw/master/App_icon/144px/Quantumult_X.png
+profile_img_url = https://gitlab.com/lodepuly/iconlibrary/raw/master/App_icon/144px/Quantumult_X.png
 resource_parser_url = https://raw.githubusercontent.com/KOP-XIAO/QuantumultX/master/Scripts/resource-parser.js
-geo_location_checker = http://ip-api.com/json/?lang=zh-CN, https://gitlab.com/lodepuly/vpn_tool/-/raw/main/Resource/Script/GeoIP/Geo_Location_Checker_for_QX.js
+geo_location_checker = http://ip-api.com/json/?lang=zh-CN, https://gitlab.com/lodepuly/vpn_tool/raw/main/Resource/Script/GeoIP/Geo_Location_Checker_for_QX.js
 server_check_timeout = 2000
-;geo_location_checker = http://ip-api.com/json/?lang=zh-CN, https://gitlab.com/lodepuly/vpn_tool/-/raw/main/Resource/Script/GeoIP/Geo_Location_Checker_for_QX.js
+;geo_location_checker = http://ip-api.com/json/?lang=zh-CN, https://gitlab.com/lodepuly/vpn_tool/raw/main/Resource/Script/GeoIP/Geo_Location_Checker_for_QX.js
 dns_exclusion_list = *.cmpassport.com, *.jegotrip.com.cn, *.icitymobile.mobi, id6.me
 [dns]
 no-system
@@ -27,21 +27,21 @@ static = 全球手动, resource-tag-regex = ., server-tag-regex = ^(?=.*(.*))(?!
 
 [filter_remote]
 https://gitlab.com/lodepuly/anti-ad/-/raw/master/anti-ad-surge.txt, tag = anti-AD, force-policy = reject, update-interval = 86400, opt-parser = true, enabled = true
-https://gitlab.com/lodepuly/proxy_tool_resources/-/raw/master/rule/QuantumultX/Telegram/Telegram.list, tag = Telegram, force-policy = 新加坡, update-interval = 86400, opt-parser = false, enabled = true
-https://gitlab.com/lodepuly/proxy_tool_resources/-/raw/master/rule/QuantumultX/TikTok/TikTok.list, tag = TikTok, force-policy = 日本, update-interval = 86400, opt-parser = false, enabled = true
-https://gitlab.com/lodepuly/proxy_tool_resources/raw/master/rule/QuantumultX/Bing/Bing.list, tag = Bing, force-policy = 香港, update-interval = 86400, opt-parser = false, enabled = true
-https://gitlab.com/lodepuly/vpn_tool/-/raw/main/Tool/QuantumultX/Rule/OpenAI.snippet, tag = OpenAI, force-policy = 香港, update-interval = 86400, opt-parser = false, enabled = false
-https://gitlab.com/lodepuly/proxy_tool_resources/-/raw/master/rule/QuantumultX/TestFlight/TestFlight.list, tag = TestFlight, force-policy = 香港, update-interval = 86400, opt-parser = false, enabled = false
-https://gitlab.com/lodepuly/vpn_tool/-/raw/main/Tool/QuantumultX/Rule/AppStore.snippet, tag = App Store, force-policy = 香港, update-interval = 86400, opt-parser = false, enabled = false
+https://gitlab.com/lodepuly/proxy_tool_resources/-/raw/master/rule/QuantumultX/Telegram/Telegram.list, tag = Telegram, force-policy = 新加坡场景策略组, update-interval = 86400, opt-parser = false, enabled = true
+https://gitlab.com/lodepuly/proxy_tool_resources/-/raw/master/rule/QuantumultX/TikTok/TikTok.list, tag = TikTok, force-policy = 日本场景策略组, update-interval = 86400, opt-parser = false, enabled = true
+https://gitlab.com/lodepuly/proxy_tool_resources/-/raw/master/rule/QuantumultX/Bing/Bing.list, tag = Bing, force-policy = 香港场景策略组, update-interval = 86400, opt-parser = false, enabled = true
+https://gitlab.com/lodepuly/vpn_tool/-/raw/main/Tool/QuantumultX/Rule/OpenAI.snippet, tag = OpenAI, force-policy = 香港场景策略组, update-interval = 86400, opt-parser = false, enabled = false
 https://gitlab.com/lodepuly/vpn_tool/-/raw/main/Tool/QuantumultX/Rule/AppleID.snippet, tag = Apple ID, force-policy = direct, update-interval = 86400, opt-parser = false, enabled = false
-https://gitlab.com/lodepuly/proxy_tool_resources/-/raw/master/rule/QuantumultX/GitHub/GitHub.list, tag = GitHub, force-policy = 香港, update-interval = 86400, opt-parser = false, enabled = false
-https://gitlab.com/lodepuly/proxy_tool_resources/-/raw/master/rule/QuantumultX/Netflix/Netflix.list, tag = Netflix, force-policy = 全球手动, update-interval = 86400, opt-parser = false, enabled = false
-https://gitlab.com/lodepuly/proxy_tool_resources/-/raw/master/rule/QuantumultX/YouTube/YouTube.list, tag = YouTube, force-policy = 香港, update-interval = 86400, opt-parser = false, enabled = false
-https://gitlab.com/lodepuly/proxy_tool_resources/-/raw/master/rule/QuantumultX/Disney/Disney.list, tag = Disney, force-policy = 香港, update-interval = 86400, opt-parser = false, enabled = false
-https://gitlab.com/lodepuly/proxy_tool_resources/-/raw/master/rule/QuantumultX/Twitter/Twitter.list, tag = Twitter, force-policy = 香港, update-interval = 86400, opt-parser = false, enabled = false
-https://gitlab.com/lodepuly/proxy_tool_resources/-/raw/master/rule/QuantumultX/Spotify/Spotify.list, tag = Spotify, force-policy = 香港, update-interval = 86400, opt-parser = false, enabled = false
-https://gitlab.com/lodepuly/proxy_tool_resources/-/raw/master/rule/QuantumultX/Google/Google.list, tag = Google, force-policy = 香港, update-interval = 86400, opt-parser = false, enabled = false
-https://gitlab.com/lodepuly/proxy_tool_resources/-/raw/master/rule/QuantumultX/OneDrive/OneDrive.list, tag = OneDrive, force-policy = 香港, update-interval = 86400, opt-parser = false, enabled = false
+https://gitlab.com/lodepuly/proxy_tool_resources/-/raw/master/rule/QuantumultX/TestFlight/TestFlight.list, tag = TestFlight, force-policy = direct, update-interval = 86400, opt-parser = false, enabled = false
+https://gitlab.com/lodepuly/vpn_tool/-/raw/main/Tool/QuantumultX/Rule/AppStore.snippet, tag = App Store, force-policy = direct, update-interval = 86400, opt-parser = false, enabled = false
+https://gitlab.com/lodepuly/proxy_tool_resources/-/raw/master/rule/QuantumultX/GitHub/GitHub.list, tag = GitHub, force-policy = 香港场景策略组, update-interval = 86400, opt-parser = false, enabled = false
+https://gitlab.com/lodepuly/proxy_tool_resources/-/raw/master/rule/QuantumultX/Netflix/Netflix.list, tag = Netflix, force-policy = 新加坡场景策略组, update-interval = 86400, opt-parser = false, enabled = false
+https://gitlab.com/lodepuly/proxy_tool_resources/-/raw/master/rule/QuantumultX/YouTube/YouTube.list, tag = YouTube, force-policy = 香港场景策略组, update-interval = 86400, opt-parser = false, enabled = false
+https://gitlab.com/lodepuly/proxy_tool_resources/-/raw/master/rule/QuantumultX/Disney/Disney.list, tag = Disney, force-policy = 香港场景策略组, update-interval = 86400, opt-parser = false, enabled = false
+https://gitlab.com/lodepuly/proxy_tool_resources/-/raw/master/rule/QuantumultX/Twitter/Twitter.list, tag = Twitter, force-policy = 香港场景策略组, update-interval = 86400, opt-parser = false, enabled = false
+https://gitlab.com/lodepuly/proxy_tool_resources/-/raw/master/rule/QuantumultX/Spotify/Spotify.list, tag = Spotify, force-policy = 香港场景策略组, update-interval = 86400, opt-parser = false, enabled = false
+https://gitlab.com/lodepuly/proxy_tool_resources/-/raw/master/rule/QuantumultX/Google/Google.list, tag = Google, force-policy = 香港场景策略组, update-interval = 86400, opt-parser = false, enabled = false
+https://gitlab.com/lodepuly/proxy_tool_resources/-/raw/master/rule/QuantumultX/OneDrive/OneDrive.list, tag = OneDrive, force-policy = 香港场景策略组, update-interval = 86400, opt-parser = false, enabled = false
 https://gitlab.com/lodepuly/proxy_tool_resources/-/raw/master/rule/QuantumultX/Speedtest/Speedtest.list, tag = Speedtest, force-policy = direct, update-interval = 86400, opt-parser = false, enabled = false
 https://gitlab.com/lodepuly/vpn_tool/-/raw/main/Tool/QuantumultX/Rule/Tieba_remove_ads_rules.snippet, tag = 贴吧去广告, update-interval = 86400, opt-parser = false, enabled = true
 https://gitlab.com/lodepuly/proxy_tool_resources/-/raw/master/rule/QuantumultX/ChinaASN/ChinaASN.list, tag = China ASN, force-policy = direct, update-interval = 86400, opt-parser = false, enabled = true
@@ -62,7 +62,8 @@ https://gitlab.com/lodepuly/vpn_tool/-/raw/main/Tool/QuantumultX/Rewrite/Amap_re
 https://gitlab.com/lodepuly/vpn_tool/-/raw/main/Tool/QuantumultX/Rewrite/BaiduNetDisk_remove_ads.snippet, tag = 百度网盘去广告, update-interval = 86400, opt-parser = false, enabled = true
 https://gitlab.com/lodepuly/vpn_tool/-/raw/main/Tool/QuantumultX/Rewrite/NeteaseCloudMusic_remove_ads.snippet, tag = 网易云音乐去广告, update-interval = 86400, opt-parser = false, enabled = true
 https://gitlab.com/lodepuly/vpn_tool/-/raw/main/Tool/QuantumultX/Rewrite/smzdm_remove_ads.snippet, tag = 什么值得买去广告, update-interval = 86400, opt-parser = false, enabled = true
-https://gitlab.com/lodepuly/vpn_tool/-/raw/main/Tool/QuantumultX/Rewrite/WeChat_Official_Accounts_remove_ads.snippet, tag = 微信公众号去广告, update-interval = 86400, opt-parser = false, enabled = true
+https://gitlab.com/lodepuly/vpn_tool/-/raw/main/Tool/QuantumultX/Rewrite/Weixin_Official_Accounts_remove_ads.snippet, tag = 微信公众号去广告, update-interval = 86400, opt-parser = false, enabled = true
+https://gitlab.com/lodepuly/vpn_tool/-/raw/main/Tool/QuantumultX/Rewrite/Weixin_external_links_unlock.snippet, tag = 微信外部链接解锁, update-interval = 86400, opt-parser = false, enabled = true
 https://gitlab.com/lodepuly/vpn_tool/-/raw/main/Tool/QuantumultX/Rewrite/TestFlight.snippet, tag = TestFlight解锁, update-interval = 86400, opt-parser = false, enabled = true
 https://gitlab.com/lodepuly/vpn_tool/-/raw/main/Tool/QuantumultX/Rewrite/GitHub.snippet, tag = GitHub加速, update-interval = 86400, opt-parser = false, enabled = false
 https://gitlab.com/lodepuly/vpn_tool/-/raw/main/Tool/QuantumultX/Rewrite/Google.snippet, tag = Google重定向, update-interval = 86400, opt-parser = false, enabled = false
