更新QuantumultX进阶配置文件模板

--- a/Tool/QuantumultX/Config/Quantumult_X_Sample_Configuration_By_iKeLee.conf
+++ b/Tool/QuantumultX/Config/Quantumult_X_Sample_Configuration_By_iKeLee.conf
@@ -121,7 +121,7 @@ https://gitlab.com/lodepuly/vpn_tool/-/raw/main/Tool/QuantumultX/Rewrite/Weixin_
 https://gitlab.com/lodepuly/vpn_tool/-/raw/main/Tool/QuantumultX/Rewrite/TestFlight.snippet, tag = TestFlight解锁, update-interval = 86400, opt-parser = false, enabled = true
 https://gitlab.com/lodepuly/vpn_tool/-/raw/main/Tool/QuantumultX/Rewrite/GitHub.snippet, tag = GitHub加速, update-interval = 86400, opt-parser = false, enabled = false
 https://gitlab.com/lodepuly/vpn_tool/-/raw/main/Tool/QuantumultX/Rewrite/Google.snippet, tag = Google重定向, update-interval = 86400, opt-parser = false, enabled = false
-https://gitlab.com/lodepuly/vpn_tool/-/raw/main/Tool/QuantumultX/Rewrite/BoxJS.snippet, tag = BoxJS, update-interval = 86400, opt-parser = false, enabled = false
+https://gitlab.com/lodepuly/vpn_tool/-/raw/main/Tool/QuantumultX/Rewrite/BoxJS.snippet, tag = BoxJS, update-interval = 86400, opt-parser = false, enabled = true
 [server_local]
 [filter_local]
 final, 香港场景策略组
