--- a/Tool/QuantumultX/Config/Quantumult_X_Simple_Sample_Configuration_By_iKeLee.conf
+++ b/Tool/QuantumultX/Config/Quantumult_X_Simple_Sample_Configuration_By_iKeLee.conf
@@ -1,5 +1,5 @@
 # Quantumelt X 配置
-# 日期：2023.02.20
+# 日期：2023.02.22
 # 配置作者：https://t.me/iKeLee
 # 适用版本：v1.1.0 及以上
 [general]
@@ -44,9 +44,8 @@ https://gitlab.com/lodepuly/proxy_tool_resources/-/raw/master/rule/QuantumultX/G
 https://gitlab.com/lodepuly/proxy_tool_resources/-/raw/master/rule/QuantumultX/OneDrive/OneDrive.list, tag = OneDrive, force-policy = 香港场景策略组, update-interval = 86400, opt-parser = false, enabled = false
 https://gitlab.com/lodepuly/proxy_tool_resources/-/raw/master/rule/QuantumultX/Speedtest/Speedtest.list, tag = Speedtest, force-policy = direct, update-interval = 86400, opt-parser = false, enabled = false
 https://gitlab.com/lodepuly/vpn_tool/-/raw/main/Tool/QuantumultX/Rule/Tieba_remove_ads_rules.snippet, tag = 贴吧去广告, update-interval = 86400, opt-parser = false, enabled = true
-https://gitlab.com/lodepuly/proxy_tool_resources/-/raw/master/rule/QuantumultX/ChinaASN/ChinaASN.list, tag = China ASN, force-policy = direct, update-interval = 86400, opt-parser = false, enabled = true
 FILTER_LAN, tag = LAN, force-policy = direct, enabled = true
-;FILTER_REGION, tag = CN, force-policy = direct, enabled = true
+FILTER_REGION, tag = CN, force-policy = direct, enabled = true
 [rewrite_remote]
 https://gitlab.com/lodepuly/vpn_tool/-/raw/main/Tool/QuantumultX/Rewrite/JD_Price.snippet, tag = 京东比价, update-interval = 86400, opt-parser = false, enabled = true
 https://gitlab.com/lodepuly/vpn_tool/-/raw/main/Tool/QuantumultX/Rewrite/Weibo_remove_ads.snippet, tag = 微博去广告, update-interval = 86400, opt-parser = false, enabled = true
