--- a/Tool/Loon/Config/Loon_Sample_Configuration_By_iKeLee.conf
+++ b/Tool/Loon/Config/Loon_Sample_Configuration_By_iKeLee.conf
@@ -1,5 +1,5 @@
 # default config
-# Date: 2023.02.20
+# Date: 2023.02.22
 # Author: https://t.me/iKeLee
 
 [General]
@@ -125,7 +125,7 @@ switch-node-after-failure-times = 3
 # IP-CIDR, 10.0.0.0/8, DIRECT
 # IP-CIDR, 172.16.0.0/12, DIRECT
 # IP-CIDR, 127.0.0.0/8, DIRECT
-# GEOIP, cn, DIRECT
+GEOIP, cn, DIRECT
 FINAL, 香港场景策略组
 
 [Remote Rule]
@@ -146,7 +146,6 @@ https://gitlab.com/lodepuly/proxy_tool_resources/-/raw/master/rule/Loon/Spotify/
 https://gitlab.com/lodepuly/proxy_tool_resources/-/raw/master/rule/Loon/Google/Google.list, policy = 香港场景策略组, tag = Google, enabled = false
 https://gitlab.com/lodepuly/proxy_tool_resources/-/raw/master/rule/Loon/OneDrive/OneDrive.list, policy = 香港场景策略组, tag = OneDrive, enabled = false
 https://gitlab.com/lodepuly/proxy_tool_resources/-/raw/master/rule/Loon/Speedtest/Speedtest.list, policy = DIRECT, tag = Speedtest, enabled = false
-https://gitlab.com/lodepuly/proxy_tool_resources/-/raw/master/rule/Loon/ChinaASN/ChinaASN_Resolve.list, policy = DIRECT, tag = China ASN, enabled = true
 
 [Host]
 # ssid:PHICOMM_5G = server:10.0.0.1
