--- a/Tool/QuantumultX/Config/Quantumult_X_Simple_Sample_Configuration_By_iKeLee.conf
+++ b/Tool/QuantumultX/Config/Quantumult_X_Simple_Sample_Configuration_By_iKeLee.conf
@@ -1,5 +1,5 @@
 # Quantumelt X 配置
-# 日期：2023.02.22
+# 日期：2023.02.23
 # 配置作者：https://t.me/iKeLee
 # 适用版本：v1.1.0 及以上
 [general]
@@ -27,21 +27,21 @@ static = 全球手动, resource-tag-regex = ., server-tag-regex = ^(?=.*(.*))(?!
 
 [filter_remote]
 https://gitlab.com/lodepuly/anti-ad/-/raw/master/anti-ad-surge.txt, tag = anti-AD, force-policy = reject, update-interval = 86400, opt-parser = true, enabled = true
-https://gitlab.com/lodepuly/proxy_tool_resources/-/raw/master/rule/QuantumultX/Telegram/Telegram.list, tag = Telegram, force-policy = 新加坡场景策略组, update-interval = 86400, opt-parser = false, enabled = true
-https://gitlab.com/lodepuly/proxy_tool_resources/-/raw/master/rule/QuantumultX/TikTok/TikTok.list, tag = TikTok, force-policy = 日本场景策略组, update-interval = 86400, opt-parser = false, enabled = true
-https://gitlab.com/lodepuly/proxy_tool_resources/-/raw/master/rule/QuantumultX/Bing/Bing.list, tag = Bing, force-policy = 香港场景策略组, update-interval = 86400, opt-parser = false, enabled = true
-https://gitlab.com/lodepuly/vpn_tool/-/raw/main/Tool/QuantumultX/Rule/OpenAI.snippet, tag = OpenAI, force-policy = 香港场景策略组, update-interval = 86400, opt-parser = false, enabled = false
+https://gitlab.com/lodepuly/proxy_tool_resources/-/raw/master/rule/QuantumultX/Telegram/Telegram.list, tag = Telegram, force-policy = 新加坡, update-interval = 86400, opt-parser = false, enabled = true
+https://gitlab.com/lodepuly/proxy_tool_resources/-/raw/master/rule/QuantumultX/TikTok/TikTok.list, tag = TikTok, force-policy = 日本, update-interval = 86400, opt-parser = false, enabled = true
+https://gitlab.com/lodepuly/proxy_tool_resources/-/raw/master/rule/QuantumultX/Bing/Bing.list, tag = Bing, force-policy = 香港, update-interval = 86400, opt-parser = false, enabled = true
+https://gitlab.com/lodepuly/vpn_tool/-/raw/main/Tool/QuantumultX/Rule/OpenAI.snippet, tag = OpenAI, force-policy = 香港, update-interval = 86400, opt-parser = false, enabled = false
 https://gitlab.com/lodepuly/vpn_tool/-/raw/main/Tool/QuantumultX/Rule/AppleID.snippet, tag = Apple ID, force-policy = direct, update-interval = 86400, opt-parser = false, enabled = false
 https://gitlab.com/lodepuly/proxy_tool_resources/-/raw/master/rule/QuantumultX/TestFlight/TestFlight.list, tag = TestFlight, force-policy = direct, update-interval = 86400, opt-parser = false, enabled = false
 https://gitlab.com/lodepuly/vpn_tool/-/raw/main/Tool/QuantumultX/Rule/AppStore.snippet, tag = App Store, force-policy = direct, update-interval = 86400, opt-parser = false, enabled = false
-https://gitlab.com/lodepuly/proxy_tool_resources/-/raw/master/rule/QuantumultX/GitHub/GitHub.list, tag = GitHub, force-policy = 香港场景策略组, update-interval = 86400, opt-parser = false, enabled = false
-https://gitlab.com/lodepuly/proxy_tool_resources/-/raw/master/rule/QuantumultX/Netflix/Netflix.list, tag = Netflix, force-policy = 新加坡场景策略组, update-interval = 86400, opt-parser = false, enabled = false
-https://gitlab.com/lodepuly/proxy_tool_resources/-/raw/master/rule/QuantumultX/YouTube/YouTube.list, tag = YouTube, force-policy = 香港场景策略组, update-interval = 86400, opt-parser = false, enabled = false
-https://gitlab.com/lodepuly/proxy_tool_resources/-/raw/master/rule/QuantumultX/Disney/Disney.list, tag = Disney, force-policy = 香港场景策略组, update-interval = 86400, opt-parser = false, enabled = false
-https://gitlab.com/lodepuly/proxy_tool_resources/-/raw/master/rule/QuantumultX/Twitter/Twitter.list, tag = Twitter, force-policy = 香港场景策略组, update-interval = 86400, opt-parser = false, enabled = false
-https://gitlab.com/lodepuly/proxy_tool_resources/-/raw/master/rule/QuantumultX/Spotify/Spotify.list, tag = Spotify, force-policy = 香港场景策略组, update-interval = 86400, opt-parser = false, enabled = false
-https://gitlab.com/lodepuly/proxy_tool_resources/-/raw/master/rule/QuantumultX/Google/Google.list, tag = Google, force-policy = 香港场景策略组, update-interval = 86400, opt-parser = false, enabled = false
-https://gitlab.com/lodepuly/proxy_tool_resources/-/raw/master/rule/QuantumultX/OneDrive/OneDrive.list, tag = OneDrive, force-policy = 香港场景策略组, update-interval = 86400, opt-parser = false, enabled = false
+https://gitlab.com/lodepuly/proxy_tool_resources/-/raw/master/rule/QuantumultX/GitHub/GitHub.list, tag = GitHub, force-policy = 香港, update-interval = 86400, opt-parser = false, enabled = false
+https://gitlab.com/lodepuly/proxy_tool_resources/-/raw/master/rule/QuantumultX/Netflix/Netflix.list, tag = Netflix, force-policy = 新加坡, update-interval = 86400, opt-parser = false, enabled = false
+https://gitlab.com/lodepuly/proxy_tool_resources/-/raw/master/rule/QuantumultX/YouTube/YouTube.list, tag = YouTube, force-policy = 香港, update-interval = 86400, opt-parser = false, enabled = false
+https://gitlab.com/lodepuly/proxy_tool_resources/-/raw/master/rule/QuantumultX/Disney/Disney.list, tag = Disney, force-policy = 香港, update-interval = 86400, opt-parser = false, enabled = false
+https://gitlab.com/lodepuly/proxy_tool_resources/-/raw/master/rule/QuantumultX/Twitter/Twitter.list, tag = Twitter, force-policy = 香港, update-interval = 86400, opt-parser = false, enabled = false
+https://gitlab.com/lodepuly/proxy_tool_resources/-/raw/master/rule/QuantumultX/Spotify/Spotify.list, tag = Spotify, force-policy = 香港, update-interval = 86400, opt-parser = false, enabled = false
+https://gitlab.com/lodepuly/proxy_tool_resources/-/raw/master/rule/QuantumultX/Google/Google.list, tag = Google, force-policy = 香港, update-interval = 86400, opt-parser = false, enabled = false
+https://gitlab.com/lodepuly/proxy_tool_resources/-/raw/master/rule/QuantumultX/OneDrive/OneDrive.list, tag = OneDrive, force-policy = 香港, update-interval = 86400, opt-parser = false, enabled = false
 https://gitlab.com/lodepuly/proxy_tool_resources/-/raw/master/rule/QuantumultX/Speedtest/Speedtest.list, tag = Speedtest, force-policy = direct, update-interval = 86400, opt-parser = false, enabled = false
 https://gitlab.com/lodepuly/vpn_tool/-/raw/main/Tool/QuantumultX/Rule/Tieba_remove_ads_rules.snippet, tag = 贴吧去广告, update-interval = 86400, opt-parser = false, enabled = true
 FILTER_LAN, tag = LAN, force-policy = direct, enabled = true
