--- a/Tool/Clash/Config/Clash_Sample_Configuration_By_iKeLee.yml
+++ b/Tool/Clash/Config/Clash_Sample_Configuration_By_iKeLee.yml
@@ -1,3 +1,8 @@
+# Clash 配置
+# 日期：2023.02.26
+# 配置作者：https://t.me/iKeLee
+# 适用版本：所有使用 Premium 核心的Clash程序
+
 profile:
 port: 7890
 socks-port: 7891
@@ -462,6 +467,13 @@ rule-providers:
     url: https://gitlab.com/lodepuly/vpn_tool/-/raw/main/Tool/Clash/Rule/iCloudChina.yaml
     interval: 10800
 
+  ApplePushNotificationService:
+    type: http
+    behavior: classical
+    path: ./RuleSet/AppleID.yaml
+    url: https://gitlab.com/lodepuly/vpn_tool/-/raw/main/Tool/Clash/Rule/ApplePushNotificationService.yaml
+    interval: 10800
+
   AppleID:
     type: http
     behavior: classical
@@ -538,6 +550,7 @@ rules:
   - RULE-SET,Netflix,Netflix
   - RULE-SET,TestFlight,TestFlight
   - RULE-SET,iCloudChina,DIRECT
+  - RULE-SET,ApplePushNotificationService,DIRECT
   - RULE-SET,AppleID,Apple ID
   - RULE-SET,AppStore,App Store
   - RULE-SET,Speedtest,Speedtest
