更新配置文件模板

--- a/Tool/Loon/Config/Loon_Sample_Configuration_By_iKeLee.conf
+++ b/Tool/Loon/Config/Loon_Sample_Configuration_By_iKeLee.conf
@@ -1,4 +1,4 @@
-# default config
+# Loon 进阶配置
 # Date: 2023.02.26
 # Author: https://t.me/iKeLee
 
@@ -131,6 +131,7 @@ FINAL, 香港场景策略组
 [Remote Rule]
 https://gitlab.com/lodepuly/anti-ad/-/raw/master/anti-ad-surge.txt, policy = REJECT, tag = Anti-AD, enabled = true
 https://gitlab.com/lodepuly/proxy_tool_resources/-/raw/master/rule/Loon/Telegram/Telegram.list, policy = 新加坡场景策略组, tag = Telegram, enabled = true
+https://gitlab.com/lodepuly/vpn_tool/-/raw/main/Tool/Loon/Rule/ApplePushNotificationService.list, policy = DIRECT, tag = Apple Push Notification Service, enabled = false
 https://gitlab.com/lodepuly/proxy_tool_resources/-/raw/master/rule/Loon/TikTok/TikTok.list, policy = 日本场景策略组, tag = TikTok, enabled = true
 https://gitlab.com/lodepuly/proxy_tool_resources/-/raw/master/rule/Loon/Bing/Bing.list, policy = 香港场景策略组, tag = Bing, enabled = true
 https://gitlab.com/lodepuly/vpn_tool/-/raw/main/Tool/Loon/Rule/OpenAI.list, policy = 香港场景策略组, tag = OpenAI, enabled = false
