更新Loon配置文件模板

--- a/Tool/Loon/Config/Loon_Simple_Sample_Configuration_By_iKeLee.conf
+++ b/Tool/Loon/Config/Loon_Simple_Sample_Configuration_By_iKeLee.conf
@@ -74,6 +74,7 @@ https://gitlab.com/lodepuly/proxy_tool_resources/-/raw/master/rule/Loon/Spotify/
 https://gitlab.com/lodepuly/proxy_tool_resources/-/raw/master/rule/Loon/Google/Google.list, policy = 香港场景策略组, tag = Google, enabled = false
 https://gitlab.com/lodepuly/proxy_tool_resources/-/raw/master/rule/Loon/OneDrive/OneDrive.list, policy = 香港场景策略组, tag = OneDrive, enabled = false
 https://gitlab.com/lodepuly/proxy_tool_resources/-/raw/master/rule/Loon/Speedtest/Speedtest.list, policy = DIRECT, tag = Speedtest, enabled = false
+https://gitlab.com/lodepuly/vpn_tool/-/raw/main/Tool/Loon/Rule/RULE_LAN, policy = DIRECT, tag = LAN, enabled = true
 https://gitlab.com/lodepuly/vpn_tool/-/raw/main/Tool/Loon/Rule/RULE_GEOIP, policy = DIRECT, tag = GeoIP CN, enabled = true
 
 [Host]
