更新QuantumultX配置文件模板

--- a/Tool/QuantumultX/Config/Quantumult_X_Sample_Configuration_By_iKeLee.conf
+++ b/Tool/QuantumultX/Config/Quantumult_X_Sample_Configuration_By_iKeLee.conf
@@ -1,6 +1,6 @@
 # Quantumelt X 进阶配置
 #
-# 日期：2023.03.06
+# 日期：2023.03.20
 # 配置作者：https://t.me/iKeLee
 # 适用版本：v1.1.0 及以上
 [general]
@@ -78,7 +78,6 @@ dest-hash = 韩国媒体负载均衡策略组, resource-tag-regex = ., server-ta
 dest-hash = 美国媒体负载均衡策略组, resource-tag-regex = ., server-tag-regex = ^(?=.*((?i)🇺🇸|美国|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|UnitedStates))(?!.*((?i)回国|校园|游戏|教育|久虚|官网|客服|网站|网址|获取|订阅|流量|到期|机场|下次|群|GAME|TG)).*$, img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/US.png
 dest-hash = 新加坡媒体负载均衡策略组, resource-tag-regex = ., server-tag-regex = ^(?=.*((?i)🇸🇬|新加坡|狮|SG|Singapore))(?!.*((?i)回国|校园|游戏|教育|久虚|官网|客服|网站|网址|获取|订阅|流量|到期|机场|下次|群|GAME|TG)).*$, img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/SG.png
 static = 全球节点手动策略组, resource-tag-regex = ., server-tag-regex = ^(?=.*(.*))(?!.*((?i)久虚|官网|客服|网站|网址|获取|订阅|流量|到期|机场|下次|群|GAME|TG)).*$, img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/Static.png
-static = 兜底策略, direct, 香港场景策略组, 台湾场景策略组, 日本场景策略组, 韩国场景策略组, 美国场景策略组, 新加坡场景策略组, img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/Final.png
 [server_remote]
 
 [filter_remote]
@@ -127,7 +126,7 @@ https://gitlab.com/lodepuly/vpn_tool/-/raw/main/Tool/QuantumultX/Rewrite/Google.
 https://gitlab.com/lodepuly/vpn_tool/-/raw/main/Tool/QuantumultX/Rewrite/BoxJS.snippet, tag = BoxJS, update-interval = 86400, opt-parser = false, enabled = true
 [server_local]
 [filter_local]
-final, 兜底策略
+final, 香港场景策略组
 [rewrite_local]
 [task_local]
 [http_backend]
