--- a/Tool/QuantumultX/Config/Quantumult_X_Simple_Sample_Configuration_By_iKeLee.conf
+++ b/Tool/QuantumultX/Config/Quantumult_X_Simple_Sample_Configuration_By_iKeLee.conf
@@ -1,6 +1,6 @@
 # Quantumelt X 最小配置
 #
-# 日期：2023.03.06
+# 日期：2023.03.20
 # 配置作者：https://t.me/iKeLee
 # 适用版本：v1.1.0 及以上
 [general]
@@ -24,7 +24,6 @@ url-latency-benchmark = 韩国, resource-tag-regex = ., server-tag-regex = ^(?=.
 url-latency-benchmark = 美国, resource-tag-regex = ., server-tag-regex = ^(?=.*((?i)🇺🇸|美国|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|UnitedStates))(?!.*((?i)回国|校园|游戏|教育|久虚|官网|客服|网站|网址|获取|订阅|流量|到期|机场|下次|群|GAME|TG)).*$, check-interval = 60, alive-checking = false, tolerance = 0, img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/US.png
 url-latency-benchmark = 新加坡, resource-tag-regex = ., server-tag-regex = ^(?=.*((?i)🇸🇬|新加坡|狮|SG|Singapore))(?!.*((?i)回国|校园|游戏|教育|久虚|官网|客服|网站|网址|获取|订阅|流量|到期|机场|下次|群|GAME|TG)).*$, check-interval = 60, alive-checking = false, tolerance = 0, img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/SG.png
 static = 全球手动, resource-tag-regex = ., server-tag-regex = ^(?=.*(.*))(?!.*((?i)久虚|官网|客服|网站|网址|获取|订阅|流量|到期|机场|下次|群|GAME|TG)).*$, img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/Static.png
-static = 兜底策略, direct, 香港, 台湾, 日本, 韩国, 美国, 新加坡, img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/Final.png
 [server_remote]
 
 [filter_remote]
@@ -73,7 +72,7 @@ https://gitlab.com/lodepuly/vpn_tool/-/raw/main/Tool/QuantumultX/Rewrite/Google.
 https://gitlab.com/lodepuly/vpn_tool/-/raw/main/Tool/QuantumultX/Rewrite/BoxJS.snippet, tag = BoxJS, update-interval = 86400, opt-parser = false, enabled = true
 [server_local]
 [filter_local]
-final, 兜底策略
+final, 香港场景策略组
 [rewrite_local]
 [task_local]
 [http_backend]
