更新QuantumultX配置文件模板

--- a/Tool/QuantumultX/Config/Quantumult_X_Sample_Configuration_By_iKeLee.conf
+++ b/Tool/QuantumultX/Config/Quantumult_X_Sample_Configuration_By_iKeLee.conf
@@ -87,9 +87,9 @@ https://gitlab.com/lodepuly/vpn_tool/-/raw/main/Tool/QuantumultX/Rule/ApplePushN
 https://gitlab.com/lodepuly/proxy_tool_resources/-/raw/master/rule/QuantumultX/TikTok/TikTok.list, tag = TikTok, force-policy = 日本场景策略组, update-interval = 86400, opt-parser = false, enabled = true
 https://gitlab.com/lodepuly/proxy_tool_resources/-/raw/master/rule/QuantumultX/Bing/Bing.list, tag = Bing, force-policy = 香港场景策略组, update-interval = 86400, opt-parser = false, enabled = true
 https://gitlab.com/lodepuly/vpn_tool/-/raw/main/Tool/QuantumultX/Rule/OpenAI.snippet, tag = OpenAI, force-policy = 香港场景策略组, update-interval = 86400, opt-parser = false, enabled = true
-https://gitlab.com/lodepuly/vpn_tool/-/raw/main/Tool/QuantumultX/Rule/AppleID.snippet, tag = Apple ID, force-policy = direct, update-interval = 86400, opt-parser = false, enabled = false
-https://gitlab.com/lodepuly/proxy_tool_resources/-/raw/master/rule/QuantumultX/TestFlight/TestFlight.list, tag = TestFlight, force-policy = direct, update-interval = 86400, opt-parser = false, enabled = false
-https://gitlab.com/lodepuly/vpn_tool/-/raw/main/Tool/QuantumultX/Rule/AppStore.snippet, tag = App Store, force-policy = direct, update-interval = 86400, opt-parser = false, enabled = false
+https://gitlab.com/lodepuly/vpn_tool/-/raw/main/Tool/QuantumultX/Rule/AppleID.snippet, tag = Apple ID, force-policy = 香港场景策略组, update-interval = 86400, opt-parser = false, enabled = false
+https://gitlab.com/lodepuly/proxy_tool_resources/-/raw/master/rule/QuantumultX/TestFlight/TestFlight.list, tag = TestFlight, force-policy = 香港场景策略组, update-interval = 86400, opt-parser = false, enabled = false
+https://gitlab.com/lodepuly/vpn_tool/-/raw/main/Tool/QuantumultX/Rule/AppStore.snippet, tag = App Store, force-policy = 香港场景策略组, update-interval = 86400, opt-parser = false, enabled = false
 https://gitlab.com/lodepuly/proxy_tool_resources/-/raw/master/rule/QuantumultX/GitHub/GitHub.list, tag = GitHub, force-policy = 香港场景策略组, update-interval = 86400, opt-parser = false, enabled = false
 https://gitlab.com/lodepuly/proxy_tool_resources/-/raw/master/rule/QuantumultX/Netflix/Netflix.list, tag = Netflix, force-policy = 新加坡场景策略组, update-interval = 86400, opt-parser = false, enabled = false
 https://gitlab.com/lodepuly/proxy_tool_resources/-/raw/master/rule/QuantumultX/YouTube/YouTube.list, tag = YouTube, force-policy = 香港场景策略组, update-interval = 86400, opt-parser = false, enabled = false
