--- a/Tool/QuantumultX/Config/Quantumult_X_Simple_Sample_Configuration_By_iKeLee.conf
+++ b/Tool/QuantumultX/Config/Quantumult_X_Simple_Sample_Configuration_By_iKeLee.conf
@@ -2,7 +2,7 @@
 #
 # 日期：2023.03.20
 # 配置作者：https://t.me/iKeLee
-# 适用版本|官址|备用：v1.1.0 及以上
+# 适用版本：v1.1.0 及以上
 [general]
 profile_img_url = https://gitlab.com/lodepuly/iconlibrary/raw/master/App_icon/144px/Quantumult_X.png
 resource_parser_url = https://raw.githubusercontent.com/KOP-XIAO/QuantumultX/master/Scripts/resource-parser.js
