--- a/Tool/Clash/Rule/OpenAI.yaml
+++ b/Tool/Clash/Rule/OpenAI.yaml
@@ -3,3 +3,4 @@ payload:
   - DOMAIN-SUFFIX, ai.com
   - DOMAIN, cdn.auth0.com
   - DOMAIN, openaiapi-site.azureedge.net
+  - DOMAIN, challenges.cloudflare.com
